@@ -20,6 +20,8 @@
 	* The '-v/--verbosity' option no longer affects GHC verbosity
 	(except in the case of '-v0'). Use '--ghc-options=-v' to enable
 	verbose GHC output (#3540, #3671).
+	* Added a warning when the external setup method uses a Cabal library
+	older than that used to build cabal-install (#707).
 
 1.24.0.0 Ryan Thomas <ryan@ryant.org> March 2016
 	* If there are multiple remote repos, 'cabal update' now updates
